# apex-framework-2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
console/: .eslintignore  .eslintrc.cjs  .eslintrc.json  .npmrc  Dockerfile  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
console/src/components/: AgentList.tsx  ConnectorList.tsx  LayerCard.tsx  Layout.tsx  ui.tsx
console/src/lib/: api.ts
console/src/pages/: agents.tsx  chat.tsx  config.tsx  governance.tsx  index.tsx  integration.tsx  intelligence.tsx  login.tsx  orchestration.tsx  supermemory.tsx
console/src/styles/: globals.css
docs/: ARCHITECTURE.md  CODEGEN_PROMPT.md  GOVERNANCE.md  INTEGRATION.md  INTELLIGENCE.md  ORCHESTRATION.md  OVERVIEW.md
examples/insurance-amp/flows/: amp_customer_360.yaml
examples/nrg-production-support/flows/: prod_support.yaml
examples/synopsys-icertis-copilot/flows/: contract_qa.yaml
infra/k8s/: governance-deploy.yaml  integration-deploy.yaml  intelligence-deploy.yaml  orchestration-deploy.yaml
sdk/python/apex_sdk/: __init__.py  client.py  governance.py  integration.py  intelligence.py  orchestration.py
sdk/typescript/src/: governance.ts  index.ts  integration.ts  intelligence.ts  (+1 more)
services/governance-service/: Dockerfile  main.py  requirements.txt
services/integration-service/: Dockerfile  main.py  requirements.txt
services/intelligence-service/: Dockerfile  main.py  requirements.txt
services/orchestration-service/: Dockerfile  main.py  requirements.txt
(+55 files in other folders)
